--- a/VolleyExample/app/src/main/res/layout/activity_main.xml
+++ b/VolleyExample/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,9 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/text_uri_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
